--- a/Report/Report.tex
+++ b/Report/Report.tex
@@ -57,15 +57,15 @@ minus 0.2ex}
 The approach is just vectorize the 2D maze array and kick out the wall grides.
 \subsection*{1.2 Visualize the optimal policy with a 2d plot, where colored boxes indicate the direction of the optimal action}
 Optimal policy by value iteration:\\
-[images]
+
 Optimal policy by policy iteration:\\
-[images]
+
 \subsection*{1.3 Do the two methods generate the same policy?}
-Yes, from the graphs above we know the optimal policies from value iteration and policy iteration are the same.
+Yes, from the graphs above we know the optimal policies from value iteration and policy iteration are the same when they are both converged.
 
 \section*{2. A Study of Algorithm Properties}
 \subsection*{2.1 Vary the discounting factor $\alpha$. Does this have a influence on the final policy?}
-Yes, the discount factor $\alpha$ decides how further the algorithm looks into future state value. If it is too small, the algorithms cares only about the step cost but ignore future state value.
+Yes, discount factor $\alpha$ decides how further the algorithm looks into future state value. If it is too small, the algorithms cares only about the step cost but ignore future state value.
 \subsection*{2.2 Run policy evaluation, policy iteration and value iteration until each have converged. Regard the solution of those runs as the ground truth value function and policy.}
 [images]
 \subsection*{2.3 Now run the three algorithms again and plot the error to the ground truth with respect to the iterations.}
